iterations added to gridsearch

--- a/notebooks/soft_q_gridsearch.ipynb
+++ b/notebooks/soft_q_gridsearch.ipynb
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
-    "base_path = \"..\"\n",
+    "base_path = \"/Users/giuseppe/Documents/Projects/RL_sim/\"\n",
     "sys.path.insert(0, base_path)\n",
     "os.chdir(base_path)\n",
     "\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,18 +67,18 @@
     "\n",
     "# Add parameter search;\n",
     "parameters = {\n",
-    "    'snr': [2, 5, 10, 20],\n",
-    "    'n_bins': [10, 20, 30],\n",
+    "    'snr': [0.5, 1, 2, 5, 10],\n",
+    "    'n_bins': [30],\n",
     "    'q_mean': [0],\n",
     "    'q_sigma': [0.1],\n",
-    "    'kernel_size': [5, 10, 20],\n",
-    "    'kernel_sigma': [1.0, 2.0, 3.0],\n",
-    "    'learning_rate': [0.80, 0.85, 0.90, 0.95, 0.99],\n",
-    "    'temperature': [1e-5, 0.001, 0.01, 0.05, 0.1, 0.5, 1.0],\n",
+    "    'kernel_size': [3, 5, 8, 12, 15],\n",
+    "    'kernel_sigma': [1.0, 2.0, 3.0, 4.0, 5.0],\n",
+    "    'learning_rate': [0.1, 0.3, 0.5, 0.8, 0.9, 0.95, 0.99],\n",
+    "    'temperature': [1e-5, 0.001, 0.01, 0.05, 0.1, 0.3, 0.5, 0.8, 1.0],\n",
     "    'min_temperature': [1e-5],\n",
     "    'max_temperature': [1.0],\n",
-    "    'reduce_temperature': [True, False],\n",
-    "    'decay_rate': [0.001, 0.005, 0.01, 0.05]\n",
+    "    'reduce_temperature': [False],\n",
+    "    'decay_rate': [0.001]\n",
     "}\n",
     "\n",
     "# Generate all possible combinations\n",
@@ -90,392 +90,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from joblib import Parallel, delayed\n",
     "\n",
-    "epochs= 100\n",
+    "epochs = 100\n",
     "n_jobs = 6\n",
     "\n",
     "assets_path = \"checkerboard_env/assets/\"\n",
-    "board, inverse, cross = load_checkerboard(join(base_path, assets_path + \"checkerboard.png\"),\n",
-    "                                        join(base_path, assets_path + \"cross.png\"))\n",
+    "board, inverse, cross = load_checkerboard(\n",
+    "    join(base_path, assets_path + \"checkerboard.png\"),\n",
+    "    join(base_path, assets_path + \"cross.png\")\n",
+    ")\n",
     "\n",
-    "data = np.array([])\n",
-    "\n",
-    "def fit_parameters(params, seed):\n",
+    "def fit_parameters(params, n_iter):\n",
     "    # import environment for each thread;\n",
     "    import checkerboard_env\n",
     "    \n",
-    "    # set seed for the Q-table initialization;\n",
-    "    rng = np.random.default_rng(seed=seed)\n",
+    "    # initialize environment variable;\n",
+    "    env = None\n",
+    "    \n",
+    "    results = []\n",
+    "    for i in range(n_iter):\n",
+    "        # set seed for the Q-table initialization;\n",
+    "        rng = np.random.default_rng(seed=n_iter)\n",
     "\n",
-    "    # load the checkerboard environment;\n",
-    "    env = gym.make('checkerboard-v0',\n",
-    "                render_mode=None,\n",
-    "                checkerboard=board,\n",
-    "                inverse=inverse,\n",
-    "                cross=cross,\n",
-    "                snr=params[\"snr\"])\n",
+    "        # load the checkerboard environment;\n",
+    "        if env is None:\n",
+    "            env = gym.make('checkerboard-v0',\n",
+    "                        render_mode=None,\n",
+    "                        checkerboard=board,\n",
+    "                        inverse=inverse,\n",
+    "                        cross=cross,\n",
+    "                        snr=params[\"snr\"])\n",
     "\n",
-    "    NUM_BINS = params[\"n_bins\"]\n",
-    "    BINS = create_bins(NUM_BINS)\n",
+    "        NUM_BINS = params[\"n_bins\"]\n",
+    "        BINS = create_bins(NUM_BINS)\n",
     "\n",
-    "    q_table_shape = (NUM_BINS, NUM_BINS)  # contrast * frequency;\n",
-    "    q_table = rng.normal(params[\"q_mean\"], params[\"q_sigma\"], q_table_shape)\n",
-    "    kernel = generate_gaussian_kernel(params[\"kernel_size\"], params[\"kernel_sigma\"])\n",
+    "        q_table_shape = (NUM_BINS, NUM_BINS)  # contrast * frequency;\n",
+    "        q_table = rng.normal(params[\"q_mean\"], params[\"q_sigma\"], q_table_shape)\n",
+    "        kernel = generate_gaussian_kernel(params[\"kernel_size\"], params[\"kernel_sigma\"])\n",
     "\n",
-    "    model = SoftQAgent(\n",
-    "        env,\n",
-    "        q_table,\n",
-    "        kernel,\n",
-    "        learning_rate=params[\"learning_rate\"],\n",
-    "        temperature=params[\"temperature\"],\n",
-    "        min_temperature=params[\"min_temperature\"],\n",
-    "        max_temperature=params[\"max_temperature\"],\n",
-    "        reduce_temperature=params[\"reduce_temperature\"],\n",
-    "        decay_rate=params[\"decay_rate\"],\n",
-    "        num_bins_per_obs=NUM_BINS\n",
-    "    )\n",
+    "        model = SoftQAgent(\n",
+    "            env,\n",
+    "            q_table,\n",
+    "            kernel,\n",
+    "            learning_rate=params[\"learning_rate\"],\n",
+    "            temperature=params[\"temperature\"],\n",
+    "            min_temperature=params[\"min_temperature\"],\n",
+    "            max_temperature=params[\"max_temperature\"],\n",
+    "            reduce_temperature=params[\"reduce_temperature\"],\n",
+    "            decay_rate=params[\"decay_rate\"],\n",
+    "            num_bins_per_obs=NUM_BINS\n",
+    "        )\n",
     "\n",
-    "    # fit the model;\n",
-    "    model.fit(epochs, BINS)\n",
+    "        # fit the model;\n",
+    "        model.fit(epochs, BINS)\n",
     "\n",
-    "    # collect the data;\n",
-    "    v_max = np.unravel_index(np.argmax(model.q_table), q_table_shape)\n",
-    "    min_rw = np.min(model.reward_log)\n",
-    "    max_rw = np.max(model.reward_log)\n",
-    "    mean_rw = np.mean(model.reward_log)\n",
+    "        # collect the data;\n",
+    "        v_max = np.unravel_index(np.argmax(model.q_table), q_table_shape)\n",
+    "        min_rw = np.min(model.reward_log)\n",
+    "        max_rw = np.max(model.reward_log)\n",
+    "        mean_rw = np.mean(model.reward_log)\n",
     "\n",
-    "    current_row = []\n",
-    "    current_row.extend(list(params.values()))\n",
-    "    current_row.extend([v_max, min_rw, max_rw, mean_rw])\n",
-    "    current_row = np.array(current_row, dtype=object)\n",
+    "        current_row = []\n",
+    "        current_row.extend(list(params.values()))\n",
+    "        current_row.extend([v_max, min_rw, max_rw, mean_rw])\n",
+    "        current_row = np.array(current_row, dtype=object)\n",
+    "        \n",
+    "        # save the data;\n",
+    "        results.append(current_row)\n",
     "\n",
-    "    return current_row\n",
+    "        if i == n_iter-1:\n",
+    "            env = None\n",
+    "    \n",
+    "    return results\n",
     "\n",
     "# run the loop in parallel;\n",
     "if __name__ == \"__main__\":\n",
     "    data = np.array([])  # Initialize data array\n",
-    "    processed_data = Parallel(n_jobs=n_jobs)(delayed(fit_parameters)(params, seed) \n",
+    "    processed_data = Parallel(n_jobs=n_jobs)(delayed(fit_parameters)(params, seed, 100)\n",
     "                                            for seed, params in enumerate(parameter_combinations))\n",
     "\n",
-    "    for current_row in processed_data:\n",
-    "        if len(data) == 0:\n",
-    "            data = current_row\n",
-    "        else:\n",
-    "            data = np.vstack((current_row, data))\n"
+    "    for current_rows in processed_data:\n",
+    "        for current_row in current_rows:\n",
+    "            if len(data) == 0:\n",
+    "                data = current_row\n",
+    "            else:\n",
+    "                data = np.vstack((current_row, data))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>snr</th>\n",
-       "      <th>n_bins</th>\n",
-       "      <th>q_mean</th>\n",
-       "      <th>q_sigma</th>\n",
-       "      <th>kernel_size</th>\n",
-       "      <th>kernel_sigma</th>\n",
-       "      <th>learning_rate</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>min_temperature</th>\n",
-       "      <th>max_temperature</th>\n",
-       "      <th>reduce_temperature</th>\n",
-       "      <th>decay_rate</th>\n",
-       "      <th>v_max</th>\n",
-       "      <th>min_rw</th>\n",
-       "      <th>max_rw</th>\n",
-       "      <th>mean_rw</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>(1, 0)</td>\n",
-       "      <td>-0.088129</td>\n",
-       "      <td>0.942034</td>\n",
-       "      <td>0.327061</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>(23, 17)</td>\n",
-       "      <td>-0.047451</td>\n",
-       "      <td>0.859617</td>\n",
-       "      <td>0.321</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>(26, 24)</td>\n",
-       "      <td>-0.060756</td>\n",
-       "      <td>0.924498</td>\n",
-       "      <td>0.340701</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>(26, 20)</td>\n",
-       "      <td>-0.104769</td>\n",
-       "      <td>0.939127</td>\n",
-       "      <td>0.36012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>(18, 26)</td>\n",
-       "      <td>-0.022512</td>\n",
-       "      <td>0.959006</td>\n",
-       "      <td>0.407238</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30235</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>(7, 3)</td>\n",
-       "      <td>-1.32633</td>\n",
-       "      <td>1.3453</td>\n",
-       "      <td>0.298738</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30236</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>(7, 0)</td>\n",
-       "      <td>-0.735798</td>\n",
-       "      <td>1.954112</td>\n",
-       "      <td>0.507503</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30237</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>(5, 6)</td>\n",
-       "      <td>-1.042181</td>\n",
-       "      <td>1.86545</td>\n",
-       "      <td>0.351399</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30238</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>(7, 5)</td>\n",
-       "      <td>-0.922577</td>\n",
-       "      <td>1.422055</td>\n",
-       "      <td>0.343417</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30239</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>0.00001</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>(6, 6)</td>\n",
-       "      <td>-0.983911</td>\n",
-       "      <td>1.522476</td>\n",
-       "      <td>0.412449</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>30240 rows × 16 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      snr n_bins q_mean q_sigma kernel_size kernel_sigma learning_rate   \n",
-       "0      20     30      0     0.1          20          3.0          0.99  \\\n",
-       "1      20     30      0     0.1          20          3.0          0.99   \n",
-       "2      20     30      0     0.1          20          3.0          0.99   \n",
-       "3      20     30      0     0.1          20          3.0          0.99   \n",
-       "4      20     30      0     0.1          20          3.0          0.99   \n",
-       "...    ..    ...    ...     ...         ...          ...           ...   \n",
-       "30235   2     10      0     0.1           5          1.0           0.8   \n",
-       "30236   2     10      0     0.1           5          1.0           0.8   \n",
-       "30237   2     10      0     0.1           5          1.0           0.8   \n",
-       "30238   2     10      0     0.1           5          1.0           0.8   \n",
-       "30239   2     10      0     0.1           5          1.0           0.8   \n",
-       "\n",
-       "      temperature min_temperature max_temperature reduce_temperature   \n",
-       "0             1.0         0.00001             1.0              False  \\\n",
-       "1             1.0         0.00001             1.0              False   \n",
-       "2             1.0         0.00001             1.0              False   \n",
-       "3             1.0         0.00001             1.0              False   \n",
-       "4             1.0         0.00001             1.0               True   \n",
-       "...           ...             ...             ...                ...   \n",
-       "30235     0.00001         0.00001             1.0              False   \n",
-       "30236     0.00001         0.00001             1.0               True   \n",
-       "30237     0.00001         0.00001             1.0               True   \n",
-       "30238     0.00001         0.00001             1.0               True   \n",
-       "30239     0.00001         0.00001             1.0               True   \n",
-       "\n",
-       "      decay_rate     v_max    min_rw    max_rw   mean_rw  \n",
-       "0           0.05    (1, 0) -0.088129  0.942034  0.327061  \n",
-       "1           0.01  (23, 17) -0.047451  0.859617     0.321  \n",
-       "2          0.005  (26, 24) -0.060756  0.924498  0.340701  \n",
-       "3          0.001  (26, 20) -0.104769  0.939127   0.36012  \n",
-       "4           0.05  (18, 26) -0.022512  0.959006  0.407238  \n",
-       "...          ...       ...       ...       ...       ...  \n",
-       "30235      0.001    (7, 3)  -1.32633    1.3453  0.298738  \n",
-       "30236       0.05    (7, 0) -0.735798  1.954112  0.507503  \n",
-       "30237       0.01    (5, 6) -1.042181   1.86545  0.351399  \n",
-       "30238      0.005    (7, 5) -0.922577  1.422055  0.343417  \n",
-       "30239      0.001    (6, 6) -0.983911  1.522476  0.412449  \n",
-       "\n",
-       "[30240 rows x 16 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# generate data columns;\n",
     "param_columns = list(parameter_combinations[0])\n",
