--- a/notebooks/soft_q_gridsearch.ipynb
+++ b/notebooks/soft_q_gridsearch.ipynb
@@ -171,7 +171,7 @@
     "# run the loop in parallel;\n",
     "if __name__ == \"__main__\":\n",
     "    data = np.array([])  # Initialize data array\n",
-    "    processed_data = Parallel(n_jobs=n_jobs)(delayed(fit_parameters)(params, seed, 100)\n",
+    "    processed_data = Parallel(n_jobs=n_jobs)(delayed(fit_parameters)(params, 100)\n",
     "                                            for seed, params in enumerate(parameter_combinations))\n",
     "\n",
     "    for current_rows in processed_data:\n",
