--- a/notebooks/soft_q_gridsearch.ipynb
+++ b/notebooks/soft_q_gridsearch.ipynb
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
-    "base_path = \"/Users/giuseppe/Documents/Projects/RL_sim/\"\n",
+    "base_path = \"/home/ubuntu/Projects/RL_sim/\"\n",
     "sys.path.insert(0, base_path)\n",
     "os.chdir(base_path)\n",
     "\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +71,8 @@
     "    'n_bins': [30],\n",
     "    'q_mean': [0],\n",
     "    'q_sigma': [0.1],\n",
-    "    'kernel_size': [3, 5, 8, 12, 15],\n",
-    "    'kernel_sigma': [1.0, 2.0, 3.0, 4.0, 5.0],\n",
+    "    'kernel_size': [15],\n",
+    "    'kernel_sigma': [1.0, 2.0, 3.0, 5.0],\n",
     "    'learning_rate': [0.1, 0.3, 0.5, 0.8, 0.9, 0.95, 0.99],\n",
     "    'temperature': [1e-5, 0.001, 0.01, 0.05, 0.1, 0.3, 0.5, 0.8, 1.0],\n",
     "    'min_temperature': [1e-5],\n",
@@ -90,14 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from joblib import Parallel, delayed\n",
     "\n",
-    "epochs = 100\n",
-    "n_jobs = 6\n",
+    "n_epochs = 100\n",
+    "n_iter = 100\n",
+    "n_jobs = 50\n",
     "\n",
     "assets_path = \"checkerboard_env/assets/\"\n",
     "board, inverse, cross = load_checkerboard(\n",
@@ -105,7 +106,7 @@
     "    join(base_path, assets_path + \"cross.png\")\n",
     ")\n",
     "\n",
-    "def fit_parameters(params, n_iter):\n",
+    "def fit_parameters(params, n_epochs, n_iter):\n",
     "    # import environment for each thread;\n",
     "    import checkerboard_env\n",
     "    \n",
@@ -113,9 +114,9 @@
     "    env = None\n",
     "    \n",
     "    results = []\n",
-    "    for i in range(n_iter):\n",
+    "    for current_iteration in range(n_iter):\n",
     "        # set seed for the Q-table initialization;\n",
-    "        rng = np.random.default_rng(seed=n_iter)\n",
+    "        rng = np.random.default_rng(seed=current_iteration)\n",
     "\n",
     "        # load the checkerboard environment;\n",
     "        if env is None:\n",
@@ -145,52 +146,361 @@
     "            decay_rate=params[\"decay_rate\"],\n",
     "            num_bins_per_obs=NUM_BINS\n",
     "        )\n",
+    "        initial_state = model.env.reset()[0]\n",
+    "        discrete_state = discretize_observation(initial_state, BINS)\n",
     "\n",
     "        # fit the model;\n",
-    "        model.fit(epochs, BINS)\n",
+    "        for current_epoch in range(n_epochs):\n",
+    "            action = model.soft_q_action_selection()\n",
     "\n",
-    "        # collect the data;\n",
-    "        v_max = np.unravel_index(np.argmax(model.q_table), q_table_shape)\n",
-    "        min_rw = np.min(model.reward_log)\n",
-    "        max_rw = np.max(model.reward_log)\n",
-    "        mean_rw = np.mean(model.reward_log)\n",
+    "            (next_state,\n",
+    "             reward,\n",
+    "             terminated,\n",
+    "             truncated,\n",
+    "             info) = model.env.step(action)\n",
     "\n",
-    "        current_row = []\n",
-    "        current_row.extend(list(params.values()))\n",
-    "        current_row.extend([v_max, min_rw, max_rw, mean_rw])\n",
-    "        current_row = np.array(current_row, dtype=object)\n",
+    "            # grab current q-value;\n",
+    "            old_q_value = model.q_table[discrete_state]\n",
+    "\n",
+    "            # discretize the next state;\n",
+    "            next_state_discrete = discretize_observation(next_state, BINS)\n",
+    "\n",
+    "            # compute next q-value and update q-table;\n",
+    "            model.q_table = model.update_q_table(reward, next_state_discrete, old_q_value)\n",
+    "\n",
+    "            # update state;\n",
+    "            discrete_state = next_state_discrete\n",
+    "\n",
+    "            # by default keep temperature constant;\n",
+    "            model.reduce_temperature(current_epoch, reduce=model.reduce_temp)\n",
+    "            model.reward_log.append(reward)\n",
+    "\n",
+    "            # collect the data;\n",
+    "            current_row = []\n",
+    "            current_row.extend(list(params.values()))\n",
+    "            current_row.extend([reward, current_epoch, current_iteration])\n",
+    "            #current_row = np.array(current_row, dtype=object)\n",
+    "\n",
+    "            # save the data;\n",
+    "            results.append(current_row)\n",
     "        \n",
-    "        # save the data;\n",
-    "        results.append(current_row)\n",
-    "\n",
-    "        if i == n_iter-1:\n",
+    "        if current_iteration == n_iter-1:\n",
     "            env = None\n",
     "    \n",
     "    return results\n",
     "\n",
     "# run the loop in parallel;\n",
     "if __name__ == \"__main__\":\n",
-    "    data = np.array([])  # Initialize data array\n",
-    "    processed_data = Parallel(n_jobs=n_jobs)(delayed(fit_parameters)(params, 100)\n",
-    "                                            for seed, params in enumerate(parameter_combinations))\n",
+    "    all_rows = []\n",
+    "    processed_data = Parallel(n_jobs=n_jobs)(delayed(fit_parameters)(params, n_epochs, n_iter)\n",
+    "                                            for params in parameter_combinations)\n",
+    "    \n",
+    "    for processed_set in processed_data:\n",
+    "        for row in processed_set:\n",
+    "            all_rows.append(row)\n",
     "\n",
-    "    for current_rows in processed_data:\n",
-    "        for current_row in current_rows:\n",
-    "            if len(data) == 0:\n",
-    "                data = current_row\n",
-    "            else:\n",
-    "                data = np.vstack((current_row, data))\n"
+    "    data = np.array(all_rows)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>snr</th>\n",
+       "      <th>n_bins</th>\n",
+       "      <th>q_mean</th>\n",
+       "      <th>q_sigma</th>\n",
+       "      <th>kernel_size</th>\n",
+       "      <th>kernel_sigma</th>\n",
+       "      <th>learning_rate</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>min_temperature</th>\n",
+       "      <th>max_temperature</th>\n",
+       "      <th>reduce_temperature</th>\n",
+       "      <th>decay_rate</th>\n",
+       "      <th>reward</th>\n",
+       "      <th>epochs</th>\n",
+       "      <th>iteration</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.538772</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>1.396779</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>-2.525203</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.529220</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.465493</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12599995</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.151588</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>99.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12599996</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.003628</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>99.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12599997</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>-0.085264</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>99.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12599998</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>-0.053025</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>99.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12599999</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.00001</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.365773</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>99.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12600000 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           snr  n_bins  q_mean  q_sigma  kernel_size  kernel_sigma  \\\n",
+       "0          0.5    30.0     0.0      0.1         15.0           1.0   \n",
+       "1          0.5    30.0     0.0      0.1         15.0           1.0   \n",
+       "2          0.5    30.0     0.0      0.1         15.0           1.0   \n",
+       "3          0.5    30.0     0.0      0.1         15.0           1.0   \n",
+       "4          0.5    30.0     0.0      0.1         15.0           1.0   \n",
+       "...        ...     ...     ...      ...          ...           ...   \n",
+       "12599995  10.0    30.0     0.0      0.1         15.0           5.0   \n",
+       "12599996  10.0    30.0     0.0      0.1         15.0           5.0   \n",
+       "12599997  10.0    30.0     0.0      0.1         15.0           5.0   \n",
+       "12599998  10.0    30.0     0.0      0.1         15.0           5.0   \n",
+       "12599999  10.0    30.0     0.0      0.1         15.0           5.0   \n",
+       "\n",
+       "          learning_rate  temperature  min_temperature  max_temperature  \\\n",
+       "0                  0.10      0.00001          0.00001              1.0   \n",
+       "1                  0.10      0.00001          0.00001              1.0   \n",
+       "2                  0.10      0.00001          0.00001              1.0   \n",
+       "3                  0.10      0.00001          0.00001              1.0   \n",
+       "4                  0.10      0.00001          0.00001              1.0   \n",
+       "...                 ...          ...              ...              ...   \n",
+       "12599995           0.99      1.00000          0.00001              1.0   \n",
+       "12599996           0.99      1.00000          0.00001              1.0   \n",
+       "12599997           0.99      1.00000          0.00001              1.0   \n",
+       "12599998           0.99      1.00000          0.00001              1.0   \n",
+       "12599999           0.99      1.00000          0.00001              1.0   \n",
+       "\n",
+       "          reduce_temperature  decay_rate    reward  epochs  iteration  \n",
+       "0                        0.0       0.001  0.538772     0.0        0.0  \n",
+       "1                        0.0       0.001  1.396779     1.0        0.0  \n",
+       "2                        0.0       0.001 -2.525203     2.0        0.0  \n",
+       "3                        0.0       0.001  0.529220     3.0        0.0  \n",
+       "4                        0.0       0.001  0.465493     4.0        0.0  \n",
+       "...                      ...         ...       ...     ...        ...  \n",
+       "12599995                 0.0       0.001  0.151588    95.0       99.0  \n",
+       "12599996                 0.0       0.001  0.003628    96.0       99.0  \n",
+       "12599997                 0.0       0.001 -0.085264    97.0       99.0  \n",
+       "12599998                 0.0       0.001 -0.053025    98.0       99.0  \n",
+       "12599999                 0.0       0.001  0.365773    99.0       99.0  \n",
+       "\n",
+       "[12600000 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# generate data columns;\n",
     "param_columns = list(parameter_combinations[0])\n",
-    "add_columns = [\"v_max\", \"min_rw\", \"max_rw\", \"mean_rw\"]\n",
+    "add_columns = [\"reward\", \"epochs\", \"iteration\"]\n",
     "columns = param_columns + add_columns\n",
     "\n",
     "# save and print data;\n",
@@ -216,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
